added error handling

--- a/templates/partners/edit-partner.html
+++ b/templates/partners/edit-partner.html
@@ -21,7 +21,7 @@
         <nav>
             <!-- If there is a user profile -->
             <div class="user">
-                <a href="#">My Favorite Stories</a>
+                <a href="{% url 'favorite_stories' %}">My Favorite Stories</a>
                 <a href="{% url 'my_stories' %}">My Stories</a>
                 <a href="{% url 'profile_details' pk=request.user.pk %}">Profile</a>
                 <a href="{% url 'logout_user' %}">Logout</a>
