--- a/templates/profile/edit-profile.html
+++ b/templates/profile/edit-profile.html
@@ -20,7 +20,7 @@
         <nav>
             <!-- If there is a user profile -->
             <div class="user">
-                <a href="#">My Favorite Stories</a>
+                <a href="{% url 'favorite_stories' %}">My Favorite Stories</a>
                 <a href="{% url 'index' %}">My Stories</a>
                 <a href="{% url 'profile_details' pk=request.user.pk %}">Profile</a>
                 <a href="{% url 'logout_user' %}">Logout</a>
