--- a/templates/stories/create-story.html
+++ b/templates/stories/create-story.html
@@ -20,7 +20,7 @@
         <nav>
             <!-- If there is a user profile -->
             <div class="user">
-                <a href="#">My Favorite Stories</a>
+                <a href="{% url 'favorite_stories' %}">My Favorite Stories</a>
                 <a href="{% url 'my_stories' %}">My Stories</a>
                 <a href="{% url 'add_story' %}">Add Story</a>
                 <a href="{% url 'profile_details' pk=request.user.pk %}">Profile</a>
@@ -47,8 +47,10 @@
                     <div> {{ form.work.label_tag }}
                         {{ form.work }} </div>
                     <div> {{ form.description }} </div>
-                    <div> {{ form.picture }} </div>
-                    {{ form.favorite_story }}
+                    <div> {{ form.picture.label_tag }}
+                        {{ form.picture }} </div>
+                    <div> {{ form.favorite_story.label_tag }}
+                        {{ form.favorite_story }} </div>
 
                     <button type="submit">Add story</button>
                     {% csrf_token %}
