--- a/templates/stories/favorite_stories.html
+++ b/templates/stories/favorite_stories.html
@@ -1,4 +1,4 @@
-{% load static %}
+{%  load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,39 +18,43 @@
             </div>
 
         <nav>
+
             <!-- If there is a user profile -->
             <div class="user">
                 <a href="{% url 'favorite_stories' %}">My Favorite Stories</a>
-                <a href="{% url 'index' %}">My Stories</a>
+                <a href="{% url 'my_stories' %}">My Stories</a>
+                <a href="{% url 'add_story' %}">Add Story</a>
                 <a href="{% url 'profile_details' pk=request.user.pk %}">Profile</a>
                 <a href="{% url 'logout_user' %}">Logout</a>
             </div>
+
 
         </nav>
     </header>
 
     <main>
 
-        <section id="edit">
+        <!-- Dashboard Page -->
+        {% if stories %}
+                <h2>Favorite stories!</h2>
+            <section id="dashboard">
 
-            <div class="form">
-                <style>
-        h1 {
-            color: sandybrown;
-        }
-    </style>
-                <h1>Are you sure you want to delete your profile?</h1>
-                
-                <!-- Delete Profile Form -->
-                <form id='delete' method="post" action="{% url 'profile_delete' pk=request.user.pk %}">
-                    <!-- Confirm Button -->
-                    <button type="submit">Yes</button>
-                    {% csrf_token %}
-                </form>
-                <!-- End Delete Profile Form -->
+            {% for story in stories %}
+            <div class="fruit">
+                <!-- fruit image -->
+                <img src="{{ story.picture }}" alt="example1"/>
+                <!-- fruit name -->
+                <h3 class="title">{{ fruit.name }}</h3>
+                <!-- fruit description -->
+                <p class="description">{{ story.description|truncatechars:50 }}</p>
+                <!-- fruit details button -->
+                <a class="details-btn" href="{% url 'detail_story' pk=story.pk %}">{{ story.date }}</a>
             </div>
-            
-        </section>
+            {% endfor %}
+            {% else %}
+            <h2>No favorite stories yet.</h2>
+            {% endif %}
+
     </main>
 </div>
 <!-- footer -->
