--- a/templates/index_no_profile.html
+++ b/templates/index_no_profile.html
@@ -12,15 +12,16 @@
 <body>
 <div id="wrapper">
     <header>
-        <!-- Navigation -->
+
         <a href="{% url 'index' %}">MyDiary</a>
 
         <nav>
 
 
-            <!-- If user profile has NOT been created -->
+
             <div class="guest">
 
+                <a href="{% url 'about' %}">About</a>
                 <a href="{% url 'register_user' %}">Create Profile</a>
                 <a href="{% url 'login_user' %}">Login</a>
 
@@ -29,7 +30,7 @@
     </header>
 
     <main>
-        <!-- Home page -->
+
         <section id="home">
           <h1>Welcome to MyDiary</h1>
           <img
@@ -41,7 +42,7 @@
 
       </main>
     </div>
-<!-- footer -->
+
     <footer>
       <p>Created by Angel Gadzhev</p>
     </footer>
